kubernetes/argo-cd/projects/production-hm/argo-cd/kubernetes-manifests/hm-argo-cd-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-argo-cd-ingress
  namespace: production-hm-argo-cd
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/routing/providers/kubernetes-ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://kubernetes-sigs.github.io/external-dns/latest/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: argo-cd.hongbomiao.com
  labels:
    app.kubernetes.io/name: argo-cd-ingress
    app.kubernetes.io/part-of: production-hm-argo-cd
spec:
  rules:
    - host: argo-cd.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hm-argo-cd-argocd-server
                port:
                  number: 80
  tls:
    - hosts:
        - argo-cd.hongbomiao.com
      secretName: production-hm-argo-cd-certificate
